--- a/homepage/templates/homepage/topic_detail.html
+++ b/homepage/templates/homepage/topic_detail.html
@@ -7,7 +7,7 @@
     <div class="container-fluid">
         <div class="row g-0">
             <div class="col-md-12 masthead-text text-center">
-                <!-- Topic title goes in these h1 tags -->
+                <!-- Topic title -->
                 <h1 class="topic-title">{{ topic.title }}</h1>
                 <!-- Topic description -->
                 <p class="topic-subtitle">{{ topic.description }}</p>
@@ -18,7 +18,7 @@
 
 <div class="container">
     <div class="row">
-        <div class="col card mb-4  mt-3 left  top">
+        <div class="col card mb-4  mt-3 left top">
             <div class="card-body">
                 <div class="row">
                     {% for content in content_page %}
