--- a/templates/base.html
+++ b/templates/base.html
@@ -38,68 +38,70 @@
 </head>
 
 <body class="d-flex flex-column h-100 main-bg">
-
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-white">
-        <div class="container-fluid">
-            <!-- wrapper div for the title to control its size -->
-            <div class="navbar-brand-wrapper">
-                <a class="navbar-brand" href="{% url 'home' %}">
-                    <span class="purple-part brand">
-                        Narcissistic</span>
-                    <span class="brand purple-part">
-                        Personality</span>
-                    <!-- Bootstrap grid system -->
-                    <div class="row">
-                        <div class="col-lg-12 col-">
-                            <span class="brand d-lg-inline d-block">
-                                <span class="purple-part">
-                                    Disorder</span>
-                                <span class="another-colour">
-                                    | Social Resources | </span>
-                            </span>
+    <!-- Website header -->
+    <header>
+        <!-- Navigation content -->
+        <nav class="navbar navbar-expand-lg navbar-light bg-white">
+            <div class="container-fluid">
+                <!-- wrapper div for the title to control its size -->
+                <div class="navbar-brand-wrapper">
+                    <a class="navbar-brand" href="{% url 'home' %}">
+                        <span class="purple-part brand">
+                            Narcissistic</span>
+                        <span class="brand purple-part">
+                            Personality</span>
+                        <div class="row">
+                            <div class="col-lg-12 col-">
+                                <span class="brand d-lg-inline d-block">
+                                    <span class="purple-part">
+                                        Disorder</span>
+                                    <span class="another-colour">
+                                        | Social Resources | </span>
+                                </span>
+                            </div>
                         </div>
-                    </div>
-                </a>
-            </div>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
-                aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-center" id="navbarText">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link {% if request.path == home_url %}active" aria-current="page{% endif %}"
-                            href="{% url 'home' %}">Home</a>
-                    </li>
+                    </a>
+                </div>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+                    aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-center" id="navbarText">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link {% if request.path == home_url %}active" aria-current="page{% endif %}"
+                                href="{% url 'home' %}">Home</a>
+                        </li>
 
-                    <li class="nav-item">
-                        <a class="nav-link
+                        <li class="nav-item">
+                            <a class="nav-link
                              {% if request.path == about_url %}active" aria-current="page{% endif %}"
-                            href="{% url 'about_page' %}">About</a>
-                    </li>
-                    {% if user.is_authenticated %}
-                    <li class="nav-item">
-                        <a class="nav-link {% if request.path == logout_url %}active" aria-current="page{% endif %}"
-                            href="{% url 'account_logout' %}">Logout</a>
-                    </li>
-                    {% else %}
-                    <li class="nav-item">
-                        <a class="nav-link {% if request.path == signup_url %}active" aria-current="page{% endif %}"
-                            href="{% url 'account_signup' %}">Register</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link {% if request.path == login_url %}active" aria-current="page{% endif %}"
-                            href="{% url 'account_login' %}">Login</a>
-                    </li>
-                    {% endif %}
-                </ul>
-                <span class="navbar-text text-muted another-colour">
-                    | Educate yourself and break free 
-                </span>
+                                href="{% url 'about_page' %}">About</a>
+                        </li>
+                        {% if user.is_authenticated %}
+                        <li class="nav-item">
+                            <a class="nav-link {% if request.path == logout_url %}active" aria-current="page{% endif %}"
+                                href="{% url 'account_logout' %}">Logout</a>
+                        </li>
+                        {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link {% if request.path == signup_url %}active" aria-current="page{% endif %}"
+                                href="{% url 'account_signup' %}">Register</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link {% if request.path == login_url %}active" aria-current="page{% endif %}"
+                                href="{% url 'account_login' %}">Login</a>
+                        </li>
+                        {% endif %}
+                    </ul>
+                    <!-- Auxiliary text -->
+                    <span class="navbar-text text-muted another-colour">
+                        | Educate yourself and break free
+                    </span>
+                </div>
             </div>
-        </div>
-    </nav>
+        </nav>
+    </header>
     <!-- displaying Django messages -->
     <div class="container">
         <div class="row">
@@ -119,24 +121,28 @@
     </div>
 
     <main class="flex-shrink-0 main-bg">
-        {% if user.is_authenticated %}
-        <p class="text-end m-3">You are logged in as {{ user }} </p>
+        
+            {% if user.is_authenticated %}
+            <p class="text-end m-3">You are logged in as {{ user }} </p>
 
-        {% else %}
-        <p class="text-end m-3">You are not logged in. </br>Log <a href="{% url 'account_login' %}">here</a>.</p>
-        {% endif %}
-
-        {% block content %}
-        <!-- Content Goes here -->
-        {% endblock content %}
-
+            {% else %}
+            <p class="text-end m-3">You are not logged in. </br>Log <a href="{% url 'account_login' %}">here</a>.</p>
+            {% endif %}
+      
+       
+            <h1 class="hidden-heading">Narcissist Personality Disorder Social resources content</h1>
+            {% block content %}
+            <!-- Content Goes here -->
+            {% endblock content %}
+        
     </main>
 
     <!-- Footer -->
     <footer class="footer mt-auto py-3 dark-bg">
-        <p class="m-0 text-center text-xs">Narcissistic Personality Disorder | Social Resources © 2024. </br> All rights reserved</p>
+        <p class="m-0 text-center text-xs">Narcissistic Personality Disorder | Social Resources © 2024. </br> All rights
+            reserved</p>
     </footer>
-
+    <!-- JavaScript for Bootstrap functionality -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
         </script>
