--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -8,24 +8,32 @@
         <div class="col-lg-6 col-md-8 mt-2">
             <div class="row">
                 {% for topic in topic_list %}
-                <div class="col-md-6"> <!-- two columns -->
-                    <div class="card mb-2 h-100 d-flex justify-content-center align-items-center">
-                        <div class="card-body card-topic-title">
-                            <a href="{% url 'topic_detail' topic.slug %}" class="topic-link">
-                            <div class="image-container">
-                                {% if "placeholder" in post.featured_image.url %}
-                                <img class="card-img-top" src="{% static 'images/default.jpg' %}"
-                                    alt="placeholder image">
-                                {% else %}
-                                <img class="card-img-top" src=" {{ topic.featured_image.url }}" alt="{{ topic.title }}">
-                                {% endif %}
+                <!-- Topic section -->
+
+                    <div class="col-md-6"> <!-- two columns -->
+                        <div class="card mb-2 h-100 d-flex justify-content-center align-items-center">
+                            <div class="card-body card-topic-title">
+                                <!-- Displaying topic image, topic title and description -->
+                                <a href="{% url 'topic_detail' topic.slug %}" class="topic-link">
+                                    <div class="image-container">
+                                        {% if "placeholder" in post.featured_image.url %}
+                                        <!-- Topic title as alt text for images -->
+                                        <img class="card-img-top" src="{% static 'images/default.jpg' %}"
+                                            alt="{{ topic.title }}">
+                                        {% else %}
+                                        <img class="card-img-top" src=" {{ topic.featured_image.url }}"
+                                            alt="{{ topic.title }}">
+                                        {% endif %}
+                                    </div>
+                                    <!-- Topic title -->
+                                    <h2 class="card-title">{{ topic.title }}</h2>
+                                    <!-- Topic short description -->
+                                    <h3 class="card-text">{{ topic.description }}</h3>
+                                </a>
                             </div>
-                                <h2 class="card-title">{{ topic.title }}</h2>
-                                <h3 class="card-text">{{ topic.description }}</h3>
-                            </a>
                         </div>
                     </div>
-                </div>
+            
                 {% if forloop.counter|divisibleby:2 %}
             </div>
             <div class="row">
@@ -36,14 +44,16 @@
     </div>
 </div>
 
+<!-- Pagination -->
 {% if is_paginated %}
 <nav aria-label="Page navigation">
     <ul class="pagination justify-content-center">
         {% if page_obj.has_previous %}
-        <li><a href="?page={{ page_obj.previous_page_number }}" class="page-link"> PREV &laquo;</a></li>
+        <li class="page-item"><a href="?page={{ page_obj.previous_page_number }}" class="page-link"> PREV &laquo;</a>
+        </li>
         {% endif %}
         {% if page_obj.has_next %}
-        <li><a href="?page={{ page_obj.next_page_number }}" class="page-link"> NEXT &raquo;</a></li>
+        <li class="page-item"><a href="?page={{ page_obj.next_page_number }}" class="page-link"> NEXT &raquo;</a></li>
         {% endif %}
     </ul>
 </nav>
