--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -27,6 +27,10 @@ body {
   background-color: #fff;
 }
 
+h1.hidden-heading {
+  display:none;
+}
+
 /* Footer */
 .dark-bg {
   background-color: #594275;
@@ -68,16 +72,9 @@ body {
   height: 13rem;
 }
 
-/* .scale {
-  width: 100%;
-  height: auto;
+.image-container:hover {
+  border: 4px solid #fff;
 }
-
-.author {
-  color: white;
-  margin: 4px;
-  text-transform: uppercase;
-} */
 
 .masthead {
   margin-top: 0.4rem;
@@ -113,11 +110,30 @@ body {
 
 .topic-link {
   text-decoration: none;
+}
+
+.card-title {
+  text-decoration: none;
   color: #445261;
 }
 
-.topic-link:hover {
+.image-container:hover img {
+  border: 1px solid #fff;
+  transform: scale(0.95);
+}
+
+.image-container:hover + .card-title {
   color: #b09cc6;
+  font-weight: 500;
+} 
+
+.card-title:hover {
+  color: #b09cc6;
+  font-weight: 500;
+} 
+
+.card-text {
+  color: #445261;
 }
 
 .page-link {
@@ -143,14 +159,13 @@ body {
   background-color: #7f5ea3;
   font-size: 1.3rem;
   color: #ffffff;
-  text-transform:uppercase;
-  padding:0.70rem;
+  text-transform: uppercase;
+  padding: 0.7rem;
   border-radius: 0.25rem;
 }
 
 .custom-background {
-  background-color: #7e6697;
-  /* #b09cc6; #664984 */
+  background-color: #664984;
 }
 
 .form-custom-word {
@@ -158,7 +173,8 @@ body {
   font-weight: 500;
 }
 
-.btn-signup {
+.btn-signup,
+.btn-cancel {
   background-color: #594275;
   color: #fff;
 }
@@ -174,7 +190,8 @@ body {
 }
 
 .btn-signup:hover,
-.btn-signup:active {
+.btn-signup:active,
+.btn-cancel:hover {
   background-color: #692fc8;
   color: #fff;
 }
@@ -207,7 +224,7 @@ body {
 
 .link:hover {
   color: #8c70aa;
-  text-decoration: underline !important;
+  text-decoration: underline;
 }
 
 .link:active {
