DOCS: Update README.md with Current Features
This commit adds detailed descriptions of the current features present in the project. This update includes information about the structure and functionality of the website, including the navigation bar, authentication and notification messages, footer, homepage layout, topic pages, and the comments section. Each feature is described with its corresponding functionality and visual representations, enhancing the clarity of the README and providing insight into the user experience.

--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
 
 </head>
 
-<body class="d-flex flex-column h-100 main-bg">
+<body class=" website-body d-flex flex-column h-100 main-bg">
     <!-- Website header -->
     <header>
         <!-- Navigation content -->
