--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,6 +2,11 @@ body {
   background-color: #f9fafc;
 }
 
+.website-body {
+  max-width: 1800px;
+  margin: auto;
+}
+
 /* Website title: brand */
 .brand {
   font-family: Lato, sans-serif;
