STYLE: Add underlines to links in Sign in and Register pages
This commit simply adds underlines to the links in the Sign in and Register pages for improved accessibility. This change ensures that users can easily identify and understand that the underlined text represents clickable links, enhancing the user experience and usability of the pages.

--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -11,9 +11,9 @@
       <h3>{% trans "Sign Up" %}</h3>
 
       <p>{% blocktrans %}
-        Welcome to the <b>Narcissistic Personality Disorder| Social Resources website</b>.
+        Welcome to the <b>Narcissistic Personality Disorder | Social Resources</b> website.
         Do you already have an account? Then please
-        <a class="link" href="{{ login_url }}"><b>sign in</b></a> instead.
+        <a class="link underline-link" href="{{ login_url }}"><b>sign in</b></a> instead.
         {% endblocktrans %}
       </p>
     </div>
