--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -12,9 +12,9 @@
     <div class="col-md-8 mt-3 offset-md-2">
       <h3>{% trans "Sign In" %}</h3>
 
-      <p>{% blocktrans %}Welcome to the <b>Narcissistic Personality Disorder| Social Resources website</b>. 
-        To leave a comment or like a post, please log in. 
-        If you have not created an account yet, then <a class="link" href="{{ signup_url }}"><b>sign up</b></a> first.{% endblocktrans %}</p>
+      <p>{% blocktrans %}Welcome to the <b>Narcissistic Personality Disorder | Social Resources |</b> website. 
+        To leave or read comments, please log in. 
+        If you have not created an account yet, then <a class="link underline-link" href="{{ signup_url }}"><b>sign up</b></a> first.{% endblocktrans %}</p>
     </div>
   </div>
   <div class="row">
