STYLE: Update site appearance for better user experience
This commit makes small changes to improve the website presentation. Media queries were created and different changes were made trying to improve visual appeal. This is still a work in progress.

--- a/templates/base.html
+++ b/templates/base.html
@@ -138,10 +138,12 @@
     </main>
 
     <!-- Footer -->
+    
     <footer class="footer mt-auto py-3 dark-bg">
-        <p class="m-0 text-center text-xs">Narcissistic Personality Disorder | Social Resources © 2024. </br> All rights
+        <p class="m-0 mx-4 text-center text-xs">Narcissistic Personality Disorder | Social Resources © 2024. </br> All rights
             reserved</p>
     </footer>
+   
     <!-- JavaScript for Bootstrap functionality -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
