--- a/homepage/templates/homepage/topic_detail.html
+++ b/homepage/templates/homepage/topic_detail.html
@@ -10,7 +10,7 @@
                 <!-- Topic title -->
                 <h1 class="topic-title">{{ topic.title }}</h1>
                 <!-- Topic description -->
-                <p class="topic-subtitle">{{ topic.description }}</p>
+                <p class="mx-2 topic-subtitle">{{ topic.description }}</p>
             </div>
         </div>
     </div>
@@ -21,9 +21,9 @@
     <div class="row">
         <div class="col card mb-4  mt-3 left top">
             <div class="card-body">
-                <div class="row">
+                <div class="row d-flex justify-content-center align-items-center">
                     {% for content in content_page %}
-                    <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
+                    <div class="align-self-start col-lg-4 col-md-6 col-sm-12 mb-4">
                         {% include 'content_management/resource_detail.html' %}
                     </div>
                     {% endfor %}
@@ -31,6 +31,8 @@
             </div>
         </div>
     </div>
+
+    <!-- Pagination -->
     {% if content_page.has_other_pages %}
     <nav aria-label="Page navigation">
         <ul class="pagination justify-content-center">
