--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -1,7 +1,16 @@
 {% extends "base.html" %}
 {% load static %}
-{% block content %}
 
+{% block head %}
+<!-- Add meta description dynamically -->
+{% if topic_list %}
+{% with topic_list.0 as first_topic %}
+<meta name="description" content="{{ first_topic.description }}">
+{% endwith %}
+{% endif %}
+{% endblock %}
+
+{% block content %}
 <!-- index.html content starts here -->
 <div class="container-fluid">
     <div class="row justify-content-center my-4"> <!-- Center the row horizontally -->
@@ -19,10 +28,10 @@
                                         {% if "placeholder" in post.featured_image.url %}
                                         <!-- Topic title as alt text for images -->
                                         <img class="card-img-top" src="{% static 'images/default.jpg' %}"
-                                            alt="{{ topic.title }}">
+                                            alt="{{ topic.title }} loading="lazy"">
                                         {% else %}
                                         <img class="card-img-top" src=" {{ topic.featured_image.url }}"
-                                            alt="{{ topic.title }}">
+                                            alt="{{ topic.title }} loading="lazy"">
                                         {% endif %}
                                     </div>
                                     <!-- Topic title -->
