--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <!-- Meta tag to allow different devices to scale the content-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <!-- Content security policy -->
+    <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
 
     <!-- Meta tags for search engines -->
     <meta name="description"
