FIX: Fix typos in HTML files
This commit fixes typos in the index.html and base.html files.

--- a/about_page/templates/about_page/about_page.html
+++ b/about_page/templates/about_page/about_page.html
@@ -9,10 +9,10 @@
         <section class="col-md-6 custom-background text-white text-left card rounded-100 my-3 p-4">
             <!-- Header with content -->
             <header>
-                <h2>{{ about_page.title }}</h2>
+                <h1>{{ about_page.title }}</h1>
             </header>
             <section>
-                {{ about_page.content | safe }}
+                <h2>{{ about_page.content | safe }}</h2>
             </section>
         </section>
         <div class="col-md-6 border border-4 mb-4 mx-4 card rounded-100">
