FIX: Fix typos in html files
This commit fixes typos and semantic elements in the code to validate HTML files.

--- a/about_page/templates/about_page/about_page.html
+++ b/about_page/templates/about_page/about_page.html
@@ -12,7 +12,7 @@
                 <h1>{{ about_page.title }}</h1>
             </header>
             <section>
-                <h2>{{ about_page.content | safe }}</h2>
+                <p>{{ about_page.content | safe }}</p>
             </section>
         </section>
         <div class="col-md-6 border border-4 mb-4 mx-4 card rounded-100">
@@ -20,7 +20,7 @@
             <section class="card my-4">
                 <!-- Feedback form message -->
                 <header class="text-center mb-4">
-                    <h2>Get in touch</h2>
+                    <h1>Get in touch</h1>
                     <p>Feel free to leave <span class="form-custom-word">feedback</span> or a <span
                             class="form-custom-word">collaboration request</span>.
                         I have big plans and I'll be happy to hear from you!</p>
