--- a/templates/base.html
+++ b/templates/base.html
@@ -58,7 +58,7 @@
     <header>
         <!-- Navigation content -->
         <nav class="navbar navbar-expand-lg navbar-light bg-white">
-            <div class="container-fluid">
+            <div class="square-nav container-fluid"> 
                 <!-- wrapper div for the title to control its size -->
                 <div class="navbar-brand-wrapper">
                     <a class="navbar-brand" href="{% url 'home' %}">
