--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -13,7 +13,7 @@
 {% block content %}
 <!-- index.html content starts here -->
 <div class="container-fluid">
-    <div class="row justify-content-center my-4"> <!-- Center the row horizontally -->
+    <div class="square-body row justify-content-center my-4"> <!-- Center the row horizontally -->
         <div class="col-lg-6 col-md-8 mt-2">
             <div class="row">
                 {% for topic in topic_list %}
